# mcp-toolsmith

./: README.md  pyproject.toml
.github/: release-template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/scripts/: claude_review.py
.github/workflows/: ci.yml  gpt-pr-review.yml  package-on-release.yml  pr-lint.yml  pr-review.yml
docs/: github-implementation-plan.md  quickstart.md  troubleshooting.md
docs/adr/: 001-pipeline-architecture.md
mcp_toolsmith/: __init__.py  cli.py  deref.py  extractor.py  generator.py  loader.py  models.py  report.py  scorer.py  validator.py
mcp_toolsmith/templates/: config.ts.j2  index.ts.j2  package.json.j2  tool_module.ts.j2  tsconfig.json.j2
mcp_toolsmith/templates/snippets/: claude_desktop_config.json.j2  langchain_snippet.py.j2  vscode_mcp_config.json.j2
tests/: conftest.py  test_cli.py  test_extractor.py  test_generator.py  test_golden.py  test_loader.py  test_regression_fixtures.py  test_scorer.py
tests/fixtures/: allof_schema.yaml  api_key_auth.yaml  bearer_auth.yaml  enum_params.yaml  nested_params.yaml  no_tags.yaml  petstore_v3.yaml  valid_openapi.yaml
tests/golden/: README.md
tests/golden/petstore/default/: package.json  report.json  tsconfig.json
tests/golden/petstore/default/src/: index.ts
tests/golden/petstore/exclude-store/: report.json
tests/golden/petstore/exclude-store/snippets/: vscode_mcp_config.json
tests/golden/petstore/exclude-store/src/: config.ts
tests/golden/petstore/exclude-store/src/tools/: pets.ts
tests/golden/petstore/include-pets/: report.json
tests/golden/petstore/include-pets/snippets/: claude_desktop_config.json
tests/golden/petstore/include-pets/src/tools/: pets.ts
tests/golden/petstore/snippets/: claude_desktop_config.json  langchain_snippet.py  vscode_mcp_config.json
tests/golden/petstore/unsafe/: report.json
tests/golden/petstore/unsafe/snippets/: langchain_snippet.py
tests/golden/petstore/unsafe/src/: index.ts
tests/golden/petstore/unsafe/src/tools/: admin.ts
