[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-toolsmith"
version = "0.1.0"
description = "CLI for generating MCP server templates from OpenAPI specifications"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "leonarduk" }
]
dependencies = [
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<6.0",
]

[project.scripts]
mcp-toolsmith = "mcp_toolsmith.cli:main"


[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2.0",
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.5,<0.7",
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["mcp_toolsmith"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools]
packages = ["mcp_toolsmith"]

[tool.pytest.ini_options]
addopts = "--cov=mcp_toolsmith --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
disable_warnings = ["no-data-collected"]
