[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-toolsmith"
version = "0.1.0"
description = "CLI for generating MCP server templates from OpenAPI specifications"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "leonarduk" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Software Development :: Code Generators",
]
dependencies = [
  "httpx>=0.27,<1.0",
  "PyYAML>=6.0,<7.0",
  "pydantic>=2.7,<3.0",
  "typer>=0.12,<1.0",
  "Jinja2>=3.1,<4.0",
  "rich>=13.7,<14.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2.0",
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.5,<0.7",
  "types-PyYAML>=6.0,<7.0",
]

[project.urls]
Homepage = "https://github.com/leonarduk/mcp-toolsmith"
Repository = "https://github.com/leonarduk/mcp-toolsmith"
Issues = "https://github.com/leonarduk/mcp-toolsmith/issues"

[project.scripts]
mcp-toolsmith = "mcp_toolsmith.cli:main"

[tool.setuptools]
packages = ["mcp_toolsmith"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["mcp_toolsmith"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=mcp_toolsmith --cov-report=term-missing"

[tool.coverage.run]
disable_warnings = ["no-data-collected"]
